fix z-index

--- a/public/css/admin/base.css
+++ b/public/css/admin/base.css
@@ -389,6 +389,8 @@ html {
   height: 1200px;
   top: -275px;
   z-index: -2; }
+  .talePreview .frameBg {
+    z-index: 0; }
   .frameBg .img, .frameBg img {
     position: absolute;
     top: 0;
